# tsnake3

./: .gitignore  _codeql_detected_source_root
.github/workflows/: sdl3-cpp-ci.yml
sdl3-cpp/: .gitignore  CMakeLists.txt  README.md
sdl3-cpp/src/: game.cpp  game.h  main.cpp
